Import of MKUTTER/Test-Pod-Content-v0.0.4 from CPAN.
gitpan-cpan-distribution: Test-Pod-Content
gitpan-cpan-version:      v0.0.4
gitpan-cpan-path:         MKUTTER/Test-Pod-Content-v0.0.4.tar.gz
gitpan-cpan-author:       MKUTTER
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Test-Pod-Content
-version: v0.0.2
+version: v0.0.4
 author:
   - 'Martin Kutter <martin.kutter@fen-net.de>'
 abstract: Test Pod content
@@ -10,10 +10,11 @@ resources:
 requires:
   Pod::Simple: 0
   Test::More: 0
+  version: 0
 provides:
   Test::Pod::Content:
     file: lib/Test/Pod/Content.pm
-    version: v0.0.2
+    version: v0.0.4
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
